2-k3s/13.t3code/one/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: t3code
  namespace: t3code
  labels:
    app.kubernetes.io/name: t3code
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: t3code
  ports:
    - name: http
      port: 3773
      targetPort: 3773
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: t3code-ssh
  namespace: t3code
  labels:
    app.kubernetes.io/name: t3code
    app.kubernetes.io/component: ssh
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.10.112
  selector:
    app.kubernetes.io/name: t3code
  ports:
    - name: ssh
      port: 22
      targetPort: ssh
      protocol: TCP
